namespace Assets.Scripts.Constants
{
    public static class AnimationConstants
    {
        public const string IS_MOVING_PARAMETER = "IsMoving";
        public const string IS_DEAD_PARAMETER = "IsDead";

        public const string ATTACK1_TRIGGER = "Attack1";
        public const string ATTACK2_TRIGGER = "Attack2";
        public const string TAKE_HIT_TRIGGER = "TakeHit";
    }
}
